Update ExtendedAnvilAdminGui.java